# Crypto-triangular-arbitrage

./: Cargo.toml  Dockerfile  README.md
src/: exchanges.rs  logic.rs  main.rs  models.rs  routes.rs  scanner.rs  utils.rs
static/: index.html
ui/: ui.py
