[package]
name = "triangular_arbitrage_rust_web"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
axum = "0.7"
reqwest = { version = "0.11", features = ["json", "gzip", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.5", features = ["cors", "fs"] }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
