[package]
name = "triangular_arbitrage"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
axum = "0.7"
reqwest = { version = "0.11", features = ["json", "gzip"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.5", features = ["cors", "fs"] }
futures = "0.3"
tracing = "0.1"
futures-util = "0.3"
tracing-subscriber = "0.3"
tokio-tungstenite = "0.20"
url = "2"
